--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
-Version: ???
+Version: 3.0.45
 Date: ???
   Changes:
+    - Refactored internal vatbrain logic to be less resource intensive and only operate when it turns on/off
     - Respects flipped buildings when replacing building with TURD version.
     - Bonemeal recipe changed to use bioreactor if pyhightech isn't enabled (resolves https://github.com/pyanodon/pybugreports/issues/1048).
     - Renamed "Logistic Station" to "Wyrmhole".
